<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBoxPreference
        android:key="hotWordActivated"
        android:title="@string/pref_title_hotword_on"
        android:defaultValue="false"
        />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_sensitivity"
        android:inputType="numberDecimal"
        android:key="hotWordSensitivity"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sensitivity" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_audio_gain"
        android:inputType="numberDecimal"
        android:key="hotWordAudioGain"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_audio_gain" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.-->
    <ListPreference
        android:defaultValue="@string/pref_default_snowboy_model"
        android:entries="@array/snowboy_model_entries"
        android:entryValues="@array/snowboy_model_entries"
        android:key="hotWordModel"
        android:title="@string/pref_title_snowboy_model" />

    <!--
    This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines.
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>-->

</PreferenceScreen>
