<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.naonedmakers.imvui.ConversationActivity">
    <item
        android:id="@+id/action_mqtt"
        android:orderInCategory="10"
        android:title="@string/action_mqtt"
        android:icon="@drawable/ic_action_mqtt"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_headset"
        android:orderInCategory="20"
        android:title="@string/action_headset"
        android:icon="@drawable/ic_action_headset"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_touch"
        android:orderInCategory="40"
        android:title="@string/action_touch"
        android:icon="@drawable/ic_touch"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_admin"
        android:orderInCategory="50"
        android:title="@string/action_admin"
        android:icon="@drawable/ic_admin"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_pref"
        app:showAsAction="always"  />

</menu>
