<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="io.naonedmakers.imvui.SettingsActivity$HotWordPreferenceFragment"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/pref_header_hotword" />
    <header
        android:fragment="io.naonedmakers.imvui.SettingsActivity$RecognitionPreferenceFragment"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/pref_header_reco" />
    <header
        android:fragment="io.naonedmakers.imvui.SettingsActivity$MeanPreferenceFragment"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/pref_header_mean" />
    <header
        android:fragment="io.naonedmakers.imvui.SettingsActivity$SynthesisPreferenceFragment"
        android:icon="@android:drawable/ic_lock_silent_mode_off"
        android:title="@string/pref_header_synth" />

    <header
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/pref_header_admin"
        android:id="@+id/launch_admin">
    </header>

    <!--intent android:targetPackage="com.mycompany.myapp"
        android:targetClass="com.mycompany.myapp.ui.MyPreferenceActivity" /-->

</preference-headers>
